--- a/src/style.css
+++ b/src/style.css
@@ -8,14 +8,14 @@ body {
 }
 
 h1 {
-  margin-top: 0;
+  margin: 0;
 }
 
 .title {
   font-family: 'Gaegu', cursive;
   text-align: center;
-  margin-bottom: 30px;
-  font-size: 50px;
+  margin-top: 20px;
+  font-size: 60px;
 }
 
 .home-container {
@@ -53,7 +53,7 @@ h1 {
 
 .change-data-buttons > button {
   font-size: 30px;
-  font-family: 'Gaegu', cursive;
+  font-family: 'Nanum Gothic';
   border: none;
   background-color: orange;
   border-radius: 4px;
