--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ h1 {
   margin: 0;
 }
 
-.title {
+.header-title {
   font-family: 'Gaegu', cursive;
   text-align: center;
   margin-top: 20px;
@@ -64,3 +64,8 @@ h1 {
 .add-item {
   margin-right: 20px;
 }
+
+/* Form 시작*/
+/* .form-container {
+  
+} */
