--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Nanum Gothic', sans-serif;
 }
 
-h1 {
+h1, h2 {
   margin: 0;
 }
 
@@ -65,7 +65,42 @@ h1 {
   margin-right: 20px;
 }
 
-/* Form 시작*/
-/* .form-container {
-  
-} */
+/* Form 시작 */
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-global-title {
+  margin-bottom: 15px;
+}
+
+.form-inputs-container {
+  width: 400px;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  background-color:pink;
+}
+
+.form-input-wrapper {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form input {
+  padding: 1px 2px;
+  border-radius: 4px;
+  margin-left: 5px;
+  border: 1px solid gray;
+}
+
+.form input:focus {
+  border: 1px solid orange; /*왜 적용이 안 되지?*/
+}
