--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,10 @@ h1, h2 {
   font-size: 15px;
 }
 
+.product-title {
+  margin-top: 10px;
+}
+
 .product-image {
   width: 220px;
   margin-right: 14px;
