--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ h1, h2 {
 }
 
 .product-image {
-  width: 220px;
+  width: 165px;
   margin-right: 14px;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
@@ -56,7 +56,8 @@ h1, h2 {
 }
 
 .change-data-buttons > button {
-  font-size: 20px;
+  font-size: 15px;
+  font-weight: 600;
   font-family: 'Nanum Gothic';
   border: none;
   background-color: orange;
