--- a/src/style.css
+++ b/src/style.css
@@ -99,7 +99,8 @@ h1, h2 {
   justify-content: space-between;
 }
 
-.form input {
+.form input,
+.form textarea {
   padding: 1px 2px;
   border-radius: 4px;
   margin-left: 5px;
